--- a/test1/templates/homepage.html
+++ b/test1/templates/homepage.html
@@ -4,11 +4,12 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
           rel="stylesheet">
-  <script type=text/javascript>
+
+  <script type=text/javascript> // for our new box
     $(function() {
       $('a#calculate').bind('click', function() {
-        $.getJSON('/_food_page', {
-          a: $('input[name="a"]').val(),
+        $.getJSON('/_make_user', {
+          names: $('input[name="names"]').val(),
         }, function(data) {
           $("#result").text(data.result);
         });
@@ -16,11 +17,12 @@
       });
     });
   </script>
+
   <script type=text/javascript>
     $(function() {
-      $('a#get_recipes').bind('click', function() {
-        $.getJSON('/_return_recipes', {
-          ingredients: $('input[name="ingredients"]').val(),
+      $('a#calculate2').bind('click', function() {
+        $.getJSON('/_food_page', {
+          b: $('input[name="b"]').val(),
         }, function(data) {
           $("#result2").text(data.result);
         });
@@ -32,18 +34,22 @@
   <body>
     <div class="container">
       <div class="header">
-        <h3 class="text-muted">Find a Recipe!</h3>
+        <h3 class="text-muted"> Rapid Recipes</h3>
+        <h4 class = "text-muted">Welcome to our program!  We are here to save you from your hungry days (and nights).</h4>
+        <h4 class = "text-muted">Login with your name, and then enter a list of ingredients that you have available.</h4><br>
       </div>
       <hr/>
       <div>
-      <p>
-    <input type="text" size="50" name="a"> 
-    <span id="result"> </span>
-    <p><a href="javascript:void();" id="calculate">Print ingredients!</a><br>    
-
-    <input type="text" size="50" name="ingredients"> 
+      <p>Enter your username.<br>
+    <input type="text" size="25" name="names"> 
+    <a href="javascript:void();" id="calculate">Log in.</a><br>    
+    Logged in as: <span id="result"> </span>
+    <br><br>
+    <p>Type of list of available ingredients seperated by commas.<br>
+    <input type="text" size="50" name="b"> 
+    <a href="javascript:void();" id="calculate2">Find recipes!</a><br>    
     <span id="result2"> </span>
-    <p><a href="javascript:void();" id="get_recipes">Print ingredients!</a><br>
+
 
 
       </form>
