--- a/test1/templates/homepage.html
+++ b/test1/templates/homepage.html
@@ -24,7 +24,12 @@
         $.getJSON('/_food_page', {
           b: $('input[name="b"]').val(),
         }, function(data) {
-          urls: $("#result2").text(data.result);
+          var htmlResults = "";
+          for (var i = 0; i < data.names.length; i ++) {
+            htmlResults += "<a href='http://www.yummly.com/recipe/" + data.ids[i] + "'>" + data.names[i] + "</a><br>";
+          }
+          console.log("We are here");
+          $("#result2").html(htmlResults);
         });
         return false;
       });
@@ -50,13 +55,6 @@
     <input type="text" size="50" name="b"> 
     <a href="javascript:void();" id="calculate2">Find recipes!</a><br>    
     <span id="result2"> </span>
-    <script>
-    {% for combo in urls %}
-      <a href = "http://www.yummly.com/recipes/{{combo}}"> Link </a>
-      <br>
-      document.write('<p> hello </p>')
-    {% endfor %}
-    </script>
       </form>
       </div>
     </div>
