--- a/test1/static/css/custom.css
+++ b/test1/static/css/custom.css
@@ -101,7 +101,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .work-sub2 {
   text-align: center;
-  font-family: "Candal", Verdana, sans-serif;
+  font-family: sans-serif;
   font-size: 1.1em;
   color: #fff;
   float: left;
@@ -110,5 +110,12 @@ input[type="range"]::-webkit-slider-thumb {
   width: 250px;
   height: 250px;
   position: absolute;
+
+}
+
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+  color: #ff7452;
 
 }
