--- a/test1/static/css/custom.css
+++ b/test1/static/css/custom.css
@@ -115,7 +115,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 h1 {
   text-align: center;
-  font-family: 'Lobster',sans-serif;
+  font-family: script,sans-serif;
   color: #ff7452;
   opacity: .75;
 
