--- a/test1/templates/homepage.html
+++ b/test1/templates/homepage.html
@@ -55,8 +55,9 @@
           var htmlResults = "";
           for (var i = 0; i < data.names.length; i ++) {
             htmlResults += 
-            "<div class='col-md-3'><div class='work-button'><a href='http://www.yummly.com/recipe/" + data.ids[i] + "'><br><img class='work-hover' src ='"+data.pics[i]+"' alt=''/><div class='work-sub'><b>"+data.names[i]+"</b><br><br>Cooktime: "+ data.times[i]+" minutes</div></div></a><br><br></div>";
+            "<div class='col-md-3'><div class='work-button'><a href='http://www.yummly.com/recipe/" + data.ids[i] + "'target='_blank'><br><img class='work-hover' src ='"+data.pics[i]+"' alt=''/><div class='work-sub'><b>"+data.names[i]+"</b><br><br>Cooktime: "+ data.times[i]+" minutes</div></div></a><br><br></div>";
           }
+          htmlResults += "<p> No more recipes to display </p>"
           console.log("We are here");
           $("#result2").html(htmlResults);
         });
